SERVER-17313 Get correct key header on each call to BtreeLogic::_insert()